--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,300 @@
+
+*{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+.slide{
+    display: none;
+}
+.slide img{
+    display: none;
+}
+input{
+    display: none;
+}
+.navM:not(:last-child){
+    margin-right: 40px ;
+}
+.navM:hover{
+    background-color: #ccc;
+}
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+#radio2:checked ~ .first{
+    margin-left: -26%;
+}
+#radio3:checked ~ .first{
+    margin-left: -52.2%;
+}
+#radio4:checked ~ .first{
+    margin-left: -77.8%;
+}
+#radio5:checked ~ .first{
+    margin-left: -104%;
+}
+#radio6:checked ~ .first{
+    margin-left: -180%;
+}
+#radio7:checked ~ .first{
+    margin-left: -365%;
+}
+#radio8:checked ~ .first{
+    margin-left: -742%;
+}
+#radio1:checked ~ .navAuto .auto-btn1{
+    background-color: #ccc;
+}
+#radio2:checked ~ .navAuto .auto-btn2{
+    background-color: #ccc;
+}
+#radio3:checked ~ .navAuto .auto-btn3{
+    background-color: #ccc;
+}
+#radio4:checked ~ .navAuto .auto-btn4{
+    background-color: #ccc;
+}
+#radio5:checked ~ .navAuto .auto-btn5{
+    background-color: #ccc;
+}
+#radio6:checked ~ .navAuto .auto-btn6{
+    background-color: #ccc;
+}
+#radio7:checked ~ .navAuto .auto-btn7{
+    background-color: #ccc;
+}
+#radio8:checked ~ .navAuto .auto-btn8{
+    background-color: #ccc;
+}
+.inicio h3{
+    padding: 100px 0 10px 0;
+    text-align: center;
+    color: green;
+    font-family: 'Rock Salt', 'cursive';
+}
+.inicio h1{
+    color: rgb(41, 41, 41);
+    font-size: 4em;
+    margin-top: -4%;
+    padding: 30px;
+    text-align: center;
+}
+.inicio a{
+    color: #fff;
+    cursor: pointer;
+    font-size: 1em;
+    padding: 18px 30px;
+    border-radius: 5px;
+    background-color: green;
+    border: none;
+    
+}
+.inicio p{
+    color:green
+}
+html{
+    scroll-behavior: smooth;
+}
+body {
+    background-color: white;
+}
+main {
+    text-align: center;
+}
+
+.cover-container h1,
+.text-container h1 {
+    padding: 0 20px;
+    font-size: 1.75em;
+    text-transform: uppercase;
+    margin: 150px auto 30px;
+}
+
+.cover-container p,
+.text-container p {
+    padding-left: 20px;
+    font-size: 1.25em;
+    width: 90%;
+    text-align: justify;
+}
+
+.cover-container figure img,
+.text-container figure img{
+    display: none;
+
+}
+ul li{
+    text-align: left;
+}
+
+@media screen and (min-width: 1080px) {
+
+    .cover-container figure img,
+    .text-container figure img {
+        width: 35%;
+        right: 2%;
+        visibility: visible;
+        position: absolute;
+        display: block;
+        float: right;
+        max-height: 500px;
+    }
+
+    .text-container p {
+        width: 30%
+    }
+    .cover-container,
+    .text-container {
+        margin-top: 13%;
+        padding: 30px;
+        background: #e7e7e7;
+    }
+
+    .cover-container p,
+    .text-container p {
+
+        padding: 50px;
+        font-size: 1.75em;
+        width: 50%;
+    }
+
+    .cover-container h1 {
+        padding: 20px;
+        font-size: 2em;
+    }
+    .inicio h3{
+        padding: 150px 0 50px 30px;
+        text-align: left;
+        color: green;
+        font-family: 'Rock Salt', 'cursive';
+    }
+    .inicio h1{
+        color: rgb(41, 41, 41);
+        font-size: 3.8em;
+        margin-top: -4%;
+        padding: 20px;
+        text-align: justify;
+    }
+    .inicio a{
+        color: #fff;
+        cursor: pointer;
+        font-size: 1em;
+        margin-left: 2%;
+        float: left;
+        padding: 18px 30px;
+        border-radius: 5px;
+        background-color: green;
+        border: none;
+        
+    }
+    .inicio p{
+        color:green
+    }
+    .navAuto div{
+        margin-top: 12.3%;
+        border: 1px solid black;
+        padding: 5px;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: 1s;
+    }
+    .navAuto{
+        position: absolute;
+        width: 800px;
+        margin-top: 380px;
+        display: flex;
+        justify-content: center;
+    }
+    .navAuto div:not(:last-child){
+        margin-right: 40px;
+    }
+    .slider{
+        background-color: green;
+        border: 2px solid green;
+        position: absolute;
+        left: 39.5%;
+        margin-top: -32%;
+        float: right;
+        border-radius: 20px;
+        width: 780px;
+        height: 500px;
+        overflow: hidden;
+    
+    }
+    .slides{
+        width: 400%;
+        height: 400px;
+        display: flex;
+    }
+    .slides input{
+        display: none;
+    }
+    .slide{
+        margin: 10px;
+        width: 100%;
+        position: relative;
+        transition: 1s;
+        display:block;
+    }
+    .slide img{
+        display: block;
+        width: 800px;
+    }
+    .navigation{
+        position: absolute;
+        width: 800px;
+        margin-top: 10%;
+        display: flex;
+        justify-content: center;
+    }
+    .navM{
+        border: 1px solid black;
+        padding: 5px;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: 1s;
+    }
+    .pezinhoMonitor{
+        position: relative;
+        float: right;
+        background-color: green;
+        border: 2px solid green;
+        left: -17%;
+        margin-top: 7%;
+        border-radius: 20px;
+        width: 300px;
+        height: 50px;
+    }
+    .navM:not(:last-child){
+        margin-right: 40px ;
+    }
+    .navM:hover{
+        background-color: #ccc;
+    }
+    #radio1:checked ~ .first{
+        margin-left: 0;
+    }
+    #radio2:checked ~ .first{
+        margin-left: -26%;
+    }
+    #radio3:checked ~ .first{
+        margin-left: -52.2%;
+    }
+    #radio4:checked ~ .first{
+        margin-left: -78.8%;
+    }
+    #radio5:checked ~ .first{
+        margin-left: -105%;
+    }
+    #radio6:checked ~ .first{
+        margin-left: -167%;
+    }
+    #radio7:checked ~ .first{
+        margin-left: -302%;
+    }
+    #radio8:checked ~ .first{
+        margin-left: -703%;
+    }
 *{
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -124,6 +421,7 @@ ul li{
         
     }
     .inicio p{
-        color:green
+        color:green;
     }
+}
 }
