--- a/css/header.css
+++ b/css/header.css
@@ -1,57 +1,48 @@
-
 * {
-	  font-family: 'Poppins', sans-serif;
-}
-a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-}
-
-a:hover {
-	border-radius: 5px;
-  background: rgba(0, 0, 0, 0.05);
-}
-.spanh{
-  font-size: 1.25em;
-  color: #fff;
-  margin-left: -40%;
-}
-#logo img{
-  user-select: none;
-  padding-right: 70%;
-	width: 23%;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
 }
 #header {
   position: fixed;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
-  z-index: 5;
+  z-index: 99;
   box-sizing: border-box;
-  height: 15%;
-  padding: 1rem 5rem;
+  height: 100px;
+  padding: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: green;
+  transition: all ease 0.5s;
 }
-
-#menu {
-  display: flex;
-  list-style: none;
-  gap: 0.5rem;
+.black{
+  background-color: #141414;
 }
-
-#menu a {
-  color: #fff;
-  display: block;
-  padding: 0.5rem;
-}
-
 #btn-mobile {
-  color: #fff;
-  display: none;
+  opacity: 0;
 }
-
+ul li a{
+  text-decoration: none;
+  color: #fff;
+}
+ul li{
+  padding: 10px;
+  justify-content: space-between;
+  display: inline-flex;
+}
+#logo img{
+  margin-top: 10px;
+  padding: 20px;
+  height: 15vh;
+}
+.spanh{
+ position: static;
+ padding-right: 10%;
+}
+.spanh a{
+  color: #fff;
+  text-decoration: none;
+}
 @media screen and (max-width: 1024px) {
   #header {
     box-sizing: border-box;
@@ -60,7 +51,7 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: green;
+    background: transparent;
   }
   #menu {
     margin-top: 2%;
@@ -82,12 +73,13 @@ a:hover {
     overflow-y: auto;
   }
   #menu a {
-    color: black;
+    color: rgb(0, 0, 0);
     padding: 1rem 0;
     margin: 0 1rem;
     border-bottom: 2px solid rgba(0, 0, 0, 0.05);
   }
   #btn-mobile {
+    color: #fff;
     display: flex;
     padding: 0.5rem 1rem;
     font-size: 1rem;
@@ -122,135 +114,19 @@ a:hover {
     top: -7px;
   }
   #logo img{
-    width: 25%;
+    margin-top: 15px;
+    padding: 20px;
+    height: 13vh;
   }
   .spanh{
-    opacity: 0;
-  }
-a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-}
-
-a:hover {
-	border-radius: 5px;
-  background: rgba(0, 0, 0, 0.05);
-}
-.spanh{
-  font-size: 1.25em;
-  color: #fff;
-  margin-left: -50%;
-}
-#logo img{
-  user-select: none;
-  padding-right: 70%;
-	width: 23%;
-}
-#header {
-  position: fixed;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  z-index: 5;
-  box-sizing: border-box;
-  height: 15%;
-  padding: 1rem 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: green;
-}
-
-#menu {
-  display: flex;
-  list-style: none;
-  gap: 0.5rem;
-}
-
-#menu a {
-  color: #fff;
-  display: block;
-  padding: 0.5rem;
-}
-
-#btn-mobile {
-  color: #fff;
-  display: none;
-}
-
-@media screen and (max-width: 990px) {
-  #header {
-    box-sizing: border-box;
-    height: 90px;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: green;
-  }
-  #menu {
-    margin-top: 2%;
-    display: block;
-    position: absolute;
-    width: 100%;
-    top: 70px;
-    right: 0px;
-    background: #e7e7e7;
-    transition: 0.6s;
-    z-index: 1;
-    height: 0px;
-    visibility: hidden;
-    overflow-y: hidden;
-  }
-  #nav.active #menu {
-    height: calc(100vh - 70px);
-    visibility: visible;
-    overflow-y: auto;
-  }
-  #menu a {
-    color: black;
-    padding: 1rem 0;
-    margin: 0 1rem;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.05);
-  }
-  #btn-mobile {
-    display: flex;
-    padding: 0.5rem 1rem;
     font-size: 1rem;
-    border: none;
-    background: none;
-    cursor: pointer;
-    gap: 0.5rem;
+    position: static;
+    white-space: nowrap;
   }
-  #hamburger {
-    border-top: 2px solid;
-    width: 20px;
+  ul li{
+    display:flex;
   }
-  #hamburger::after,
-  #hamburger::before {
-    content: '';
-    display: block;
-    width: 20px;
-    height: 2px;
-    background: currentColor;
-    margin-top: 5px;
-    transition: 0.3s;
-    position: relative;
+  #btn-mobile{
+    opacity: 1;
   }
-  #nav.active #hamburger {
-    border-top-color: transparent;
-  }
-  #nav.active #hamburger::before {
-    transform: rotate(135deg);
-  }
-  #nav.active #hamburger::after {
-    transform: rotate(-135deg);
-    top: -7px;
-  }
-  #logo img{
-    width: 25%;
-  }
-  .spanh{
-    opacity: 0;
-  }
-}
 }
